test/types/enum/ferguson/enum-overflow.good
enum-overflow.chpl:32: error: unresolved call 'writeint(myenum)'
enum-overflow.chpl:24: note: candidates are: writeint(x: int)
enum-overflow.chpl:27: note:                 writeint(x: uint)
enum-overflow.chpl:33: error: unresolved call 'writeint(myenum)'
enum-overflow.chpl:24: note: candidates are: writeint(x: int)
enum-overflow.chpl:27: note:                 writeint(x: uint)
enum-overflow.chpl:34: error: unresolved call 'writeint(myenum)'
enum-overflow.chpl:24: note: candidates are: writeint(x: int)
enum-overflow.chpl:27: note:                 writeint(x: uint)
